discipline module chapter add
