# docs/swagger.yaml
@@ -102,21 +102,21 @@ definitions:
     - name
     - qualification_id
     type: object
-  dto.StoreDisciplineModuleDTO:
+  dto.StoreDisciplineModuleChapterDTO:
     properties:
-      discipline_id:
+      discipline_module_id:
         example: 1
         type: integer
       name:
-        example: DisciplineModule Name
+        example: DisciplineModuleChapter Name
         type: string
     required:
-    - discipline_id
+    - discipline_module_id
     - name
     type: object
-  dto.StoreDisciplineModuleTopicDTO:
+  dto.StoreDisciplineModuleChapterTopicDTO:
     properties:
-      discipline_module_id:
+      discipline_module_chapter_id:
         example: 1
         type: integer
       hours_individual:
@@ -138,18 +138,31 @@ definitions:
         example: 0
         type: integer
       name:
-        example: DisciplineModuleTopic Name
+        example: DisciplineModuleChapterTopic Name
         type: string
       type:
         enum:
         - practice
         - theory
+        - combined
         example: practice
         type: string
     required:
-    - discipline_module_id
+    - discipline_module_chapter_id
     - name
     - type
+    type: object
+  dto.StoreDisciplineModuleDTO:
+    properties:
+      discipline_id:
+        example: 1
+        type: integer
+      name:
+        example: DisciplineModule Name
+        type: string
+    required:
+    - discipline_id
+    - name
     type: object
   dto.StoreQualificationDTO:
     properties:
@@ -233,18 +246,18 @@ definitions:
         example: 1
         type: integer
     type: object
-  dto.UpdateDisciplineModuleDTO:
+  dto.UpdateDisciplineModuleChapterDTO:
     properties:
-      discipline_id:
+      discipline_module_id:
         example: 1
         type: integer
       name:
-        example: DisciplineModule Name
+        example: DisciplineModuleChapter Name
         type: string
     type: object
-  dto.UpdateDisciplineModuleTopicDTO:
+  dto.UpdateDisciplineModuleChapterTopicDTO:
     properties:
-      discipline_module_id:
+      discipline_module_chapter_id:
         example: 1
         type: integer
       hours_individual:
@@ -266,13 +279,23 @@ definitions:
         example: 0
         type: integer
       name:
-        example: DisciplineModuleTopic Name
+        example: DisciplineModuleChapterTopic Name
         type: string
       type:
         enum:
         - practice
         - theory
+        - combined
         example: practice
+        type: string
+    type: object
+  dto.UpdateDisciplineModuleDTO:
+    properties:
+      discipline_id:
+        example: 1
+        type: integer
+      name:
+        example: DisciplineModule Name
         type: string
     type: object
   dto.UpdateProfileDTO:
@@ -408,6 +431,9 @@ definitions:
       updated_at:
         example: "2021-01-01T00:00:00Z"
         type: string
+      user_id:
+        example: 1
+        type: integer
     type: object
   entity.DisciplineModule:
     properties:
@@ -417,9 +443,9 @@ definitions:
       discipline_id:
         example: 1
         type: integer
-      discipline_module_topics:
+      discipline_module_chapters:
         items:
-          $ref: '#/definitions/entity.DisciplineModuleTopic'
+          $ref: '#/definitions/entity.DisciplineModuleChapter'
         type: array
       id:
         example: 1
@@ -431,12 +457,37 @@ definitions:
         example: "2021-01-01T00:00:00Z"
         type: string
     type: object
-  entity.DisciplineModuleTopic:
+  entity.DisciplineModuleChapter:
+    properties:
+      code:
+        example: JHN
+        type: string
+      created_at:
+        example: "2021-01-01T00:00:00Z"
+        type: string
+      discipline_module_chapter_topics:
+        items:
+          $ref: '#/definitions/entity.DisciplineModuleChapterTopic'
+        type: array
+      discipline_module_id:
+        example: 1
+        type: integer
+      id:
+        example: 1
+        type: integer
+      name:
+        example: John
+        type: string
+      updated_at:
+        example: "2021-01-01T00:00:00Z"
+        type: string
+    type: object
+  entity.DisciplineModuleChapterTopic:
     properties:
       created_at:
         example: "2021-01-01T00:00:00Z"
         type: string
-      discipline_module_id:
+      discipline_module_chapter_id:
         example: 1
         type: integer
       hours_individual:
@@ -560,11 +611,20 @@ definitions:
         example: johndoe
         type: string
     type: object
-  v1.getDisciplineModuleTopicsResponse:
+  v1.getDisciplineModuleChapterTopicsResponse:
     properties:
-      disciplineModuleTopics:
+      disciplineModuleChapterTopics:
         items:
-          $ref: '#/definitions/entity.DisciplineModuleTopic'
+          $ref: '#/definitions/entity.DisciplineModuleChapterTopic'
+        type: array
+      total:
+        type: integer
+    type: object
+  v1.getDisciplineModuleChaptersResponse:
+    properties:
+      disciplineModuleChapters:
+        items:
+          $ref: '#/definitions/entity.DisciplineModuleChapter'
         type: array
       total:
         type: integer
@@ -746,38 +806,38 @@ paths:
       summary: User Registration
       tags:
       - Auth
-  /v1/disciplineModuleTopics:
+  /v1/disciplineModuleChapterTopics:
     get:
       consumes:
       - application/json
-      description: Fetch a list of disciplineModuleTopics.
-      operationId: get_disciplineModuleTopics
+      description: Fetch a list of disciplineModuleChapterTopics.
+      operationId: get_disciplineModuleChapterTopics
       produces:
       - application/json
       responses:
         "200":
-          description: Successful response with disciplineModuleTopic list
+          description: Successful response with disciplineModuleChapterTopic list
           schema:
-            $ref: '#/definitions/v1.getDisciplineModuleTopicsResponse'
+            $ref: '#/definitions/v1.getDisciplineModuleChapterTopicsResponse'
         "500":
           description: Internal server error
           schema:
             $ref: '#/definitions/v1.response'
-      summary: Get DisciplineModuleTopics
+      summary: Get DisciplineModuleChapterTopics
       tags:
-      - DisciplineModuleTopics
+      - DisciplineModuleChapterTopics
     post:
       consumes:
       - application/json
-      description: Store a new disciplineModuleTopic.
-      operationId: store_disciplineModuleTopic
+      description: Store a new disciplineModuleChapterTopic.
+      operationId: store_disciplineModuleChapterTopic
       parameters:
-      - description: DisciplineModuleTopic request body
+      - description: DisciplineModuleChapterTopic request body
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.StoreDisciplineModuleTopicDTO'
+          $ref: '#/definitions/dto.StoreDisciplineModuleChapterTopicDTO'
       produces:
       - application/json
       responses:
@@ -793,17 +853,17 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/v1.response'
-      summary: Store DisciplineModuleTopic
+      summary: Store DisciplineModuleChapterTopic
       tags:
-      - DisciplineModuleTopics
-  /v1/disciplineModuleTopics/{id}:
+      - DisciplineModuleChapterTopics
+  /v1/disciplineModuleChapterTopics/{id}:
     delete:
       consumes:
       - application/json
-      description: Delete a disciplineModuleTopic.
-      operationId: delete_disciplineModuleTopic
+      description: Delete a disciplineModuleChapterTopic.
+      operationId: delete_disciplineModuleChapterTopic
       parameters:
-      - description: DisciplineModuleTopic ID
+      - description: DisciplineModuleChapterTopic ID
         in: path
         name: id
         required: true
@@ -819,16 +879,16 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/v1.response'
-      summary: Delete DisciplineModuleTopic
+      summary: Delete DisciplineModuleChapterTopic
       tags:
-      - DisciplineModuleTopics
+      - DisciplineModuleChapterTopics
     get:
       consumes:
       - application/json
-      description: Fetch a disciplineModuleTopic by ID.
-      operationId: get_disciplineModuleTopic
+      description: Fetch a disciplineModuleChapterTopic by ID.
+      operationId: get_disciplineModuleChapterTopic
       parameters:
-      - description: DisciplineModuleTopic ID
+      - description: DisciplineModuleChapterTopic ID
         in: path
         name: id
         required: true
@@ -837,16 +897,117 @@ paths:
       - application/json
       responses:
         "200":
-          description: Successful response with disciplineModuleTopic
+          description: Successful response with disciplineModuleChapterTopic
           schema:
-            $ref: '#/definitions/entity.DisciplineModuleTopic'
+            $ref: '#/definitions/entity.DisciplineModuleChapterTopic'
         "500":
           description: Internal server error
           schema:
             $ref: '#/definitions/v1.response'
-      summary: Get DisciplineModuleTopic
+      summary: Get DisciplineModuleChapterTopic
       tags:
-      - DisciplineModuleTopics
+      - DisciplineModuleChapterTopics
+  /v1/disciplineModuleChapters:
+    get:
+      consumes:
+      - application/json
+      description: Fetch a list of disciplineModuleChapters.
+      operationId: get_disciplineModuleChapters
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response with disciplineModuleChapter list
+          schema:
+            $ref: '#/definitions/v1.getDisciplineModuleChaptersResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Get DisciplineModuleChapters
+      tags:
+      - DisciplineModuleChapters
+    post:
+      consumes:
+      - application/json
+      description: Store a new disciplineModuleChapter.
+      operationId: store_disciplineModuleChapter
+      parameters:
+      - description: DisciplineModuleChapter request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.StoreDisciplineModuleChapterDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully stored
+          schema:
+            $ref: '#/definitions/v1.response'
+        "400":
+          description: Invalid request payload
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Store DisciplineModuleChapter
+      tags:
+      - DisciplineModuleChapters
+  /v1/disciplineModuleChapters/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a disciplineModuleChapter.
+      operationId: delete_disciplineModuleChapter
+      parameters:
+      - description: DisciplineModuleChapter ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully deleted
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Delete DisciplineModuleChapter
+      tags:
+      - DisciplineModuleChapters
+    get:
+      consumes:
+      - application/json
+      description: Fetch a disciplineModuleChapter by ID.
+      operationId: get_disciplineModuleChapter
+      parameters:
+      - description: DisciplineModuleChapter ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response with disciplineModuleChapter
+          schema:
+            $ref: '#/definitions/entity.DisciplineModuleChapter'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/v1.response'
+      summary: Get DisciplineModuleChapter
+      tags:
+      - DisciplineModuleChapters
   /v1/disciplineModules:
     get:
       consumes:
